--- a/_includes/subscribe-links.html
+++ b/_includes/subscribe-links.html
@@ -1,4 +1,4 @@
-<ul class="subscribe-links" data-episode-title="{{ include.episode_title | default: "" }}">
+<ul class="subscribe-links" data-episode-title="{{ include.episode_title | default: "" }}" id="{{ include.id | default: "" }}">
     <li>
         <a href="https://geo.itunes.apple.com/podcast/us/is1247652431?mt=2&at=1010lbVy&ct=mozilla_{{ include.itunes_tracking }}" rel="external" data-service="iTunes"><img src="{{ "/assets/images/apple-podcasts-badge.svg" | relative_url }}" alt="Subscribe on Apple Podcasts"></a>
     </li>
