--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -19,7 +19,7 @@ id:     home
             from Mozilla. Because online life is real life.
         </p>
 
-        {% include subscribe-links.html itunes_tracking="homepage" %}
+        {% include subscribe-links.html itunes_tracking="homepage" id="subscribe-links-primary" %}
     </div>
 </section>
 
