--- a/_includes/episode-module.html
+++ b/_includes/episode-module.html
@@ -20,11 +20,11 @@
 {% endif %}
 
     <ul class="episode-links">
-        <li><a href="#subscribe-links" class="episode-subscribe-link" data-subscribe-links="episode-{{ episode.number }}-subscribe-links">Subscribe</a></li>
+        <li><a href="{{ "#subscribe-links-primary" | absolute_url }}" class="episode-subscribe-link" data-subscribe-links="episode-{{ episode.number }}-subscribe-links">Subscribe</a></li>
     {% if include.view != "episode" %}
-        <li><a href="{{ episode.url | relative_url }}#show_notes" class="episode-shownotes-link" data-shownotes="episode-{{ episode.number }}-shownotes">Show Notes</a></li>
+        <li><a href="{{ episode.url | relative_url }}#show-notes" class="episode-shownotes-link" data-shownotes="episode-{{ episode.number }}-shownotes">Show Notes</a></li>
     {% endif %}
-        <li><a href="" class="episode-share-link" data-share-links="episode-{{ episode.number }}-share-links">Share</a></li>
+        <li class="episode-link-share"><a href="" class="episode-share-link" data-share-links="episode-{{ episode.number }}-share-links">Share</a></li>
     </ul>
 
     <iframe class="episode-player" src="{{ episode.embed }}?style=light" seamless="" scrolling="no" width="100%" height="36px" frameborder="0"></iframe>
