--- a/_sass/irlpodcast.scss
+++ b/_sass/irlpodcast.scss
@@ -143,20 +143,6 @@ a:visited:hover {
     }
 }
 
-// modal-specific styles
-#modal {
-    // subscribe links stack top to bottom in modal
-    .subscribe-links {
-        display: block;
-        margin-top: 40px;
-
-        li {
-            margin-bottom: 20px;
-            text-align: left;
-        }
-    }
-}
-
 #episode-list {
     border-bottom: 1px solid #ccc;
     padding-bottom: 40px;
@@ -190,6 +176,7 @@ a:visited:hover {
     }
 }
 
+// customizations for .episode when in a list (like on the home page)
 #episode-list {
     .episode-image {
         display: none;
@@ -248,14 +235,6 @@ a:visited:hover {
         }
     }
 
-    .episode-player {
-        display: none;
-
-        @media #{$mq-tablet} {
-            display: block;
-        }
-    }
-
     .episode-links {
         display: none;
         max-width: none;
@@ -263,6 +242,10 @@ a:visited:hover {
         @media #{$mq-tablet} {
             display: flex;
         }
+    }
+
+    .episode-player {
+        display: none;
     }
 }
 
@@ -303,12 +286,26 @@ a:visited:hover {
     width: 18px;
 }
 
-.modal-content-wrapper {
-    // don't display titles or modal copy inside of a modal wrapper
-    // they should only be shown when inside of an actual modal
-    h4,
-    .modal-copy {
-        display: none;
+// should not show up with JS disabled
+.episode-link-share,
+.episode-player {
+    display: none;
+}
+
+// show share link with JS enabled
+.js {
+    .episode-link-share {
+        display: list-item;
+    }
+
+    .episode-player {
+        display: block;
+    }
+
+    @media #{$mq-tablet} {
+        #episode-list .episode-player {
+            display: block;
+        }
     }
 }
 
@@ -389,15 +386,32 @@ a:visited:hover {
 }
 
 // modal stuff
-.transcript-modal-wrapper {
-    display: none;
-}
-
 #modal {
     h4 {
         @include font-size-level3();
         margin-bottom: 20px;
         text-align: center;
+    }
+
+    // subscribe links stack top to bottom in modal
+    .subscribe-links {
+        display: block;
+        margin-top: 40px;
+
+        li {
+            margin-bottom: 20px;
+            text-align: left;
+        }
+    }
+}
+
+.modal-content-wrapper {
+    display: none;
+    // don't display titles or modal copy inside of a modal wrapper
+    // they should only be shown when inside of an actual modal
+    h4,
+    .modal-copy {
+        display: none;
     }
 }
 
@@ -433,13 +447,5 @@ a:visited:hover {
     &:before {
         @include gradient-bar();
         margin-bottom: 20px;
-    }
-}
-
-// JS enabled stuff
-.js {
-    .modal-content-wrapper,
-    .transcript-modal-wrapper {
-        display: none;
     }
 }
