More small UI tweaks Add privacy link under newsletter signup

--- a/_includes/episode-module.html
+++ b/_includes/episode-module.html
@@ -33,7 +33,7 @@
     <div class="modal-content-wrapper">
         <div class="episode-subscribe-links" id="episode-{{ episode.number }}-subscribe-links">
             <p class="modal-copy">
-                {{ site.description }}
+                Subscribe to IRL. Because online life is real life.
             </p>
 
             {% assign itunes_tracking = episode.number | prepend: "episode" %}
