--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="{{ site.url }}">
+    <meta property="og:image" content="{{ "/assets/images/irl-logo-600px.png" | absolute_url }}">
+    <meta property="og:title" content="{{ site.title }}">
+    <meta property="og:description" content="Veronica Belmont explores real stories of life online – and real talk about how we can all keep the Internet healthy, weird and wonderful. IRL is an original podcast from Mozilla.">
+
     <!-- TODO: remove for launch! -->
     <meta name="robots" content="noindex" />
 
