--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -13,11 +13,17 @@ id:     home
             <h1>IRL: Because Online Life Is Real Life</h1>
         </div>
 
-        <p id="site-intro">
-            Host Veronica Belmont shares real stories of life online &mdash; and
-            real talk about the future of the Web. IRL is an original podcast
-            from Mozilla. Because online life is real life.
-        </p>
+        <div id="site-intro">
+            <p>
+                Host Veronica Belmont shares real stories of life online and
+                real talk about the future of the Web. IRL is an original
+                podcast from Mozilla.
+            </p>
+
+            <p>
+                IRL is an original podcast from Mozilla.
+            </p>
+        </div>
 
         {% include subscribe-links.html itunes_tracking="homepage" id="subscribe-links-primary" %}
     </div>
