--- a/_sass/irlpodcast.scss
+++ b/_sass/irlpodcast.scss
@@ -440,6 +440,11 @@ a:visited:hover {
     }
 }
 
+#footer-privacy-link {
+    margin: 20px 0 10px;
+    text-align: center;
+}
+
 // episode page
 #show-notes {
     padding-top: 20px;
