Improve OG stuff Small improvements based on Micaela's doc

--- a/_includes/episode-module.html
+++ b/_includes/episode-module.html
@@ -47,12 +47,8 @@
                 Episode {{ episode.number }} - {{ episode.title | escape }}
             </p>
 
-            <p class="modal-copy">
-                {{ episode.description | markdownify }}
-            </p>
-
-            {% assign episode_share_url = episode.url | absolute_url %}
-            {% assign episode_share_text = episode.number | prepend: "IRL Podcast - Episode " | append: ": " | append: episode.title  %}
+            {% assign episode_share_url = page.url | absolute_url %}
+            {% assign episode_share_text = episode.title  %}
             {% include social-share-links.html share_url=episode_share_url share_text=episode_share_text episode_title=episode.title %}
         </div>
     </div>
