--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,6 @@
 ---
-layout: default
-id:     home
+layout:     default
+body_id:    home
 ---
 
 <section id="intro">
@@ -16,8 +16,7 @@ id:     home
         <div id="site-intro">
             <p>
                 Host Veronica Belmont shares real stories of life online and
-                real talk about the future of the Web. IRL is an original
-                podcast from Mozilla.
+                real talk about the future of the Web.
             </p>
 
             <p>
