--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,16 +4,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="{{ site.url }}">
+    <meta property="og:url" content="{{ page.url | absolute_url }}">
     <meta property="og:image" content="{{ "/assets/images/irl-logo-600px.png" | absolute_url }}">
-    <meta property="og:title" content="{{ site.title }}">
-    <meta property="og:description" content="Veronica Belmont explores real stories of life online – and real talk about how we can all keep the Internet healthy, weird and wonderful. IRL is an original podcast from Mozilla.">
+    <meta property="og:title" content="{{ site.title }}{% if page.og_title %} - {{ page.og_title }}{% endif %}">
+    <meta property="og:description" content="{{ page.description | default: "Veronica Belmont explores real stories of life online – and real talk about how we can all keep the Internet healthy, weird and wonderful. IRL is an original podcast from Mozilla." | markdownify | strip_html | strip_newlines }}">
 
     <!-- TODO: remove for launch! -->
     <meta name="robots" content="noindex" />
 
     <title>{% if page.title %}{{ page.title | escape }}{% else %}{{ site.title | escape }}{% endif %}</title>
-    <meta name="description" content="{{ page.excerpt | default: site.description | strip_html | normalize_whitespace | truncate: 160 | escape }}">
+    <meta name="description" content="{{ page.description | default: site.description | markdownify | strip_html | normalize_whitespace | truncate: 160 | escape }}">
 
     <meta name="apple-itunes-app" content="app-id=1247652431, affiliate-data=at=1010lbVy&ct=mozilla_smart_banner">
 
