--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,25 +1,26 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}" class="no-js">
-    {% include head.html %}
 
-    <body id="{{ page.id }}">
-    {% if jekyll.environment == 'production' and site.gtm_id %}
-        <!-- Google Tag Manager (noscript) -->
-        <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ site.gtm_id }}" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
-        <!-- End Google Tag Manager (noscript) -->
-    {% endif %}
+{% include head.html %}
 
-        {% include header.html %}
+<body id="{{ page.body_id | default: "home" }}">
+{% if jekyll.environment == 'production' and site.gtm_id %}
+    <!-- Google Tag Manager (noscript) -->
+    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id={{ site.gtm_id }}" height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <!-- End Google Tag Manager (noscript) -->
+{% endif %}
 
-        <main class="page-content" aria-label="Content">
-            {{ content }}
-        </main>
+    {% include header.html %}
 
-        {% include footer.html %}
-    </body>
+    <main class="page-content" aria-label="Content">
+        {{ content }}
+    </main>
+
+    {% include footer.html %}
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
     <script src="{{ "/assets/js/main.js" | relative_url }}"></script>
     <script src="{{ "/assets/js/mozilla.modal.js" | relative_url }}"></script>
     <script src="{{ "/assets/js/newsletter.js" | relative_url }}"></script>
+</body>
 </html>
