--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -808,8 +808,7 @@ a:visited:hover {
   padding: 17px 0 0 50px; }
 
 #footer-privacy-link {
-  margin: 20px 0 10px;
-  text-align: center; }
+  margin: 20px 0 10px; }
 
 #show-notes {
   padding-top: 20px; }
