--- a/_includes/subscribe-links.html
+++ b/_includes/subscribe-links.html
@@ -8,7 +8,7 @@
     <li>
         <a href="https://play.radiopublic.com/irl-online-life-is-real-life-6Bv5Op" rel="external" data-service="Radio Public"><img src="{{ "/assets/images/radiopublic-badge.svg" | relative_url }}" alt="Subscribe on RadioPublic"></a>
     </li>
-    <li class="rss-link">
-        <a href="https://feeds.mozilla-podcasts.org/irl" data-service="RSS">Or, subscribe using RSS</a>
+    <li>
+        <a href="https://feeds.mozilla-podcasts.org/irl" data-service="RSS" class="rss-link">RSS Feed</a>
     </li>
 </ul>
