--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ body_id:    home
 <section id="intro">
     <div class="content">
         <div id="site-logo">
-            <img src="{{ "/assets/images/irl-logo-300px.png" | relative_url }}" srcset="{{ "/assets/images/irl-logo-600px.png" | relative_url }} 2x" alt="">
+            <img src="{{ "/assets/images/irl-logo.png" | relative_url }}" srcset="{{ "/assets/images/irl-logo-high-res.png" | relative_url }} 2x" alt="">
         </div>
 
         <div id="site-title">
