--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
 
     {% include footer.html %}
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
+    <script src="{{ "/assets/js/jquery.3.2.1.min.js" | relative_url }}"></script>
     <script src="{{ "/assets/js/main.js" | relative_url }}"></script>
     <script src="{{ "/assets/js/mozilla.modal.js" | relative_url }}"></script>
     <script src="{{ "/assets/js/newsletter.js" | relative_url }}"></script>
