--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -577,14 +577,14 @@ a:visited:hover {
   border-radius: 4px;
   padding: 3px 17px 3px 2px; }
   .subscribe-links .rss-link:before {
-    -webkit-background-size: 15px 18px;
-    background-size: 15px 18px;
-    background-image: url("/irlpodcast/assets/images/rss.svg");
+    -webkit-background-size: 15px 15px;
+    background-size: 15px 15px;
+    background-image: url("/irlpodcast/assets/images/icon-subscribe.svg");
     background-repeat: no-repeat;
     content: '';
     display: block;
     float: left;
-    height: 18px;
+    height: 20px;
     margin: 6px 10px 0;
     width: 15px; }
 @media screen and (min-width: 480px) {
@@ -713,38 +713,58 @@ a:visited:hover {
   .js #episode-list .episode-player {
     display: block; } }
 
-.social-share-links {
-  display: flex;
-  justify-content: flex-start; }
-  .social-share-links li {
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
-    box-sizing: border-box;
-    flex: 0 0 auto;
-    margin: 0 20px 0 0;
-    padding: 0 4px; }
-    .social-share-links li a {
-      background: #000;
-      border-radius: 50%;
+.social-share-links li {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  margin-bottom: 10px;
+  padding: 0 4px; }
+  .social-share-links li a {
+    background: #000;
+    border-radius: 50%;
+    display: block;
+    height: 70px;
+    overflow: hidden;
+    text-indent: 120%;
+    width: 70px; }
+    .social-share-links li a:before {
+      background-size: 50px;
+      content: '';
       display: block;
-      height: 70px;
-      margin: 0 auto;
-      overflow: hidden;
-      text-indent: 120%;
-      width: 70px; }
-      .social-share-links li a:before {
-        background-size: 50px;
-        content: '';
-        display: block;
-        height: 50px;
-        margin: 10px auto;
-        width: 50px; }
+      height: 50px;
+      margin: 10px auto;
+      width: 50px; }
+.social-share-links input {
+  border: none;
+  display: block;
+  margin-top: 20px;
+  width: 100%; }
+@media screen and (min-width: 480px) {
+  .social-share-links ul {
+    display: flex;
+    justify-content: flex-start; }
+  .social-share-links li {
+    flex: 0 0 auto;
+    margin: 0 20px 0 0; }
+    .social-share-links li a {
+      margin: 0 auto; } }
 
 .twitter:before {
-  background: url("/irlpodcast/assets/images/twitter.svg") top left no-repeat; }
+  background: url("/irlpodcast/assets/images/fa-twitter.svg") top left no-repeat; }
 
 .facebook:before {
-  background: url("/irlpodcast/assets/images/facebook.svg") top left no-repeat; }
+  background: url("/irlpodcast/assets/images/fa-facebook.svg") top left no-repeat; }
+
+.copylink:before {
+  background: url("/irlpodcast/assets/images/fa-link.svg") top left no-repeat; }
+
+.copy-ok {
+  font-style: italic;
+  margin-top: 10px;
+  opacity: 0; }
+  .copy-ok.show {
+    -webkit-animation: pebbles-fade-in 0.3s ease-in 0s 1 normal both;
+    animation: pebbles-fade-in 0.3s ease-in 0s 1 normal both; }
 
 #footer {
   background: #111;
