--- a/_includes/subscribe-links.html
+++ b/_includes/subscribe-links.html
@@ -3,7 +3,7 @@
         <a href="https://geo.itunes.apple.com/podcast/us/is1247652431?mt=2&at=1010lbVy&ct=mozilla_{{ include.itunes_tracking }}" rel="external" data-service="iTunes"><img src="{{ "/assets/images/apple-podcasts-badge.svg" | relative_url }}" alt="Subscribe on Apple Podcasts"></a>
     </li>
     <li>
-        <a href="" rel="external" data-service="Spotify"><img src="{{ "/assets/images/spotify-badge.svg" | relative_url }}" alt="Subscribe on Spotify"></a>
+        <a href="https://open.spotify.com/show/0vT7LJMeVDxyQ2ZamHKu08" rel="external" data-service="Spotify"><img src="{{ "/assets/images/spotify-badge.svg" | relative_url }}" alt="Subscribe on Spotify"></a>
     </li>
     <li>
         <a href="https://play.radiopublic.com/irl-online-life-is-real-life-6Bv5Op" rel="external" data-service="Radio Public"><img src="{{ "/assets/images/radiopublic-badge.svg" | relative_url }}" alt="Subscribe on RadioPublic"></a>
