--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -19,8 +19,9 @@
     {% include footer.html %}
 
     <script src="{{ "/assets/js/jquery.3.2.1.min.js" | relative_url }}"></script>
-    <script src="{{ "/assets/js/main.js" | relative_url }}"></script>
+    <script src="{{ "/assets/js/clipboard.min.js" | relative_url }}"></script>
     <script src="{{ "/assets/js/mozilla.modal.js" | relative_url }}"></script>
     <script src="{{ "/assets/js/newsletter.js" | relative_url }}"></script>
+    <script src="{{ "/assets/js/main.js" | relative_url }}"></script>
 </body>
 </html>
