--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -514,7 +514,7 @@ a:visited:hover {
   color: #984aaf; }
 
 .page-content {
-  padding-bottom: 70px; }
+  padding-bottom: 20px; }
 
 @media screen and (min-width: 760px) {
   .content p {
@@ -522,7 +522,7 @@ a:visited:hover {
     font-size: 1.375rem; } }
 
 #site-header {
-  margin-top: 40px;
+  margin-top: 80px;
   padding-bottom: 0; }
 
 #mozilla-logo {
@@ -610,8 +610,11 @@ a:visited:hover {
     grid-template: repeat(4, auto)/300px auto;
     grid-template-areas: "logo title" "logo links" "logo player"; }
     .episode .episode-image {
+      -webkit-box-sizing: border-box;
+      -moz-box-sizing: border-box;
+      box-sizing: border-box;
       grid-area: logo;
-      margin-right: 20px; }
+      padding-right: 20px; }
     .episode .episode-title-wrapper {
       grid-area: title; }
     .episode .episode-links {
@@ -624,7 +627,6 @@ a:visited:hover {
   @media screen and (min-width: 760px) {
     #episode-list .episode-image {
       display: block;
-      border: 1px solid #999;
       align-self: start;
       height: 200px;
       justify-self: end;
@@ -768,11 +770,11 @@ a:visited:hover {
 
 #footer {
   background: #111;
-  bottom: 0;
+  top: 0;
   color: #fff;
   height: 70px;
   left: 0;
-  margin-top: 20px;
+  margin-bottom: 20px;
   position: fixed;
   width: 100%; }
   #footer a,
