--- a/_sass/irlpodcast.scss
+++ b/_sass/irlpodcast.scss
@@ -58,7 +58,7 @@ a:visited:hover {
 }
 
 #site-header {
-    margin-top: 80px; // compensate for fixed nav
+    margin-top: 60px; // compensate for fixed nav
     padding-bottom: 0;
 }
 
@@ -403,11 +403,15 @@ a:visited:hover {
     background: #111;
     top: 0;
     color: #fff;
-    height: 70px;
+    height: 50px;
     left: 0;
     margin-bottom: 20px;
     position: fixed;
     width: 100%;
+
+    .content {
+        padding: 10px 20px;
+    }
 
     a,
     a:active,
