--- a/docs/assets/main.css
+++ b/docs/assets/main.css
@@ -522,7 +522,7 @@ a:visited:hover {
     font-size: 1.375rem; } }
 
 #site-header {
-  margin-top: 80px;
+  margin-top: 60px;
   padding-bottom: 0; }
 
 #mozilla-logo {
@@ -772,11 +772,13 @@ a:visited:hover {
   background: #111;
   top: 0;
   color: #fff;
-  height: 70px;
+  height: 50px;
   left: 0;
   margin-bottom: 20px;
   position: fixed;
   width: 100%; }
+  #footer .content {
+    padding: 10px 20px; }
   #footer a,
   #footer a:active,
   #footer a:focus,
