Add Episode 1 to the site.
- Adjust some CSS padding/borders
- Update README
- Update og_title prefix for all episodes

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,8 +6,8 @@
     <meta property="og:type" content="website">
     <meta property="og:url" content="{{ page.url | absolute_url }}">
     <meta property="og:image" content="{{ "/assets/images/irl-logo-open-graph.png" | absolute_url }}">
-    <meta property="og:title" content="{{ site.title }}{% if page.og_title %} - {{ page.og_title }}{% endif %}">
-    <meta property="og:description" content="{% if page.og_description %}{{ site.og_episode_description_prefix | append: " " | append: page.og_description | markdownify | strip_html | strip_newlines }}{% else %}Veronica Belmont explores real stories of life online – and real talk about how we can all keep the Internet healthy, weird and wonderful. IRL is an original podcast from Mozilla.{% endif %}">
+    <meta property="og:title" content="IRL Podcast{% if page.og_title %} {{ page.og_title }}{% endif %}">
+    <meta property="og:description" content="{{ page.og_description | markdownify | strip_html | strip_newlines | default: "Veronica Belmont explores real stories of life online – and real talk about how we can all keep the Internet healthy, weird and wonderful. IRL is an original podcast from Mozilla." }}">
 
     <link rel="apple-touch-icon" type="image/png" sizes="180x180" href="{{ "/assets/images/favicon/favicon-180x180.png" | relative_url }}">
     <link rel="icon" type="image/png" sizes="196x196" href="{{ "/assets/images/favicon/favicon-196x196.png" | relative_url }}">
