--- a/_includes/social-share-links.html
+++ b/_includes/social-share-links.html
@@ -1,6 +1,6 @@
 <aside class="social-share-links" data-episode-title="{{ include.episode_title | default: ""}}">
     <ul>
-        <li><a class="twitter" data-service="twitter" href="https://www.twitter.com/intent/tweet?url={{ include.share_url | uri_escape }}&amp;text={{ site.og_episode_description_prefix | url_encode }}{{ include.share_text | prepend: " " | url_encode }}" title="Twitter" data-link-type="social share" data-link-name="Twitter">Twitter</a></li>
+        <li><a class="twitter" data-service="twitter" href="https://www.twitter.com/intent/tweet?url={{ include.share_url | uri_escape }}&amp;text=IRL Podcast Episode {{ include.episode_number}}: {{ include.share_text | url_encode }}" title="Twitter" data-link-type="social share" data-link-name="Twitter">Twitter</a></li>
         <li><a class="facebook" data-service="facebook" href="https://www.facebook.com/sharer/sharer.php?u={{ include.share_url | uri_escape }}" title="Facebook" data-link-type="social share" data-link-name="Facebook">Facebook</a></li>
         <li><a class="copylink" data-service="copylink" href="{{ include.share_url }}" data-link-type="social share" data-link-name="copylink" data-clipboard-target="#episode-url-input-{{ include.episode_number }}">Copy Link</a></li>
     </ul>
