Amend feed link

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -20,7 +20,7 @@
 
     <link rel="stylesheet" href="{{ "/assets/main.css" | relative_url }}">
     <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
-    <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
+    <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="https://feeds.mozilla-podcasts.org/irl">
 
     <script src="{{ "/assets/js/pre-render.js" | relative_url }}"></script>
     <script src="{{ "/assets/js/mozilla.dnt-helper.js" | relative_url }}"></script>
