--- a/_includes/subscribe-links.html
+++ b/_includes/subscribe-links.html
@@ -1,12 +1,12 @@
 <ul class="subscribe-links" data-episode-title="{{ include.episode_title | default: "" }}" id="{{ include.id | default: "" }}">
     <li>
-        <a href="https://geo.itunes.apple.com/podcast/us/is1247652431?mt=2&at=1010lbVy&ct=mozilla_{{ include.itunes_tracking }}" rel="external" data-service="iTunes"><img src="{{ "/assets/images/apple-podcasts-badge.svg" | relative_url }}" alt="Subscribe on Apple Podcasts"></a>
+        <a href="https://geo.itunes.apple.com/podcast/us/is1247652431?mt=2&amp;at=1010lbVy&amp;ct=mozilla_{{ include.itunes_tracking }}" rel="external" data-service="iTunes"><img src="{{ "/assets/images/apple-podcasts-badge.svg" | relative_url }}" alt="Subscribe on Apple Podcasts"></a>
     </li>
     <li>
         <a href="https://open.spotify.com/show/0vT7LJMeVDxyQ2ZamHKu08" rel="external" data-service="Spotify"><img src="{{ "/assets/images/spotify-badge.svg" | relative_url }}" alt="Subscribe on Spotify"></a>
     </li>
     <li>
-        <a href="https://play.radiopublic.com/irl-online-life-is-real-life-6Bv5Op" rel="external" data-service="Radio Public"><img src="{{ "/assets/images/radiopublic-badge.svg" | relative_url }}" alt="Subscribe on RadioPublic"></a>
+        <a href="https://play.radiopublic.com/irl-online-life-is-real-life-6Bv5Op?utm_source=Mozilla&amp;utm_medium=irl-website&amp;utm_campaign={{ include.rp_campaign | default: "header-badge" }}" rel="external" data-service="Radio Public"><img src="{{ "/assets/images/radiopublic-badge.svg" | relative_url }}" alt="Subscribe on RadioPublic"></a>
     </li>
     <li>
         <a href="https://feeds.mozilla-podcasts.org/irl" data-service="RSS" class="rss-link">RSS Feed</a>
